# MarketInsight-

./: AAPL.csv  GOOGL.csv  META.csv  MSFT.csv  NVDA.csv  TSLA.csv  Tweet.py  ^GSPC.csv  app.py  constants.py  pyproject.toml  requirements.txt
attached_assets/: AAPL.csv  AXB.IL.csv  AXISBANK.NS.csv  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-utf-8-meta-http-equiv-X-UA--1742923268442.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-utf-8-title-Market-insights-title--1742923255151.txt  Pasted--coding-utf-8-IMPORT-PACKAGES-from-flask-import-1742923173971.txt  Pasted-TemplateSyntaxError-jinja2-exceptions-TemplateSyntaxError-Encountered-unknown-tag-now-Traceb-1742923462901.txt  Pasted-TemplateSyntaxError-jinja2-exceptions-TemplateSyntaxError-Encountered-unknown-tag-now-Traceb-1742923844308.txt  TWTR stock price.csv  YUM.csv
static/css/: style.css
static/js/: charts.js  main.js
templates/: about.html  base.html  index.html  portfolio.html  prediction.html  result.html
