[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alpha-vantage>=3.0.0",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "preprocessor>=1.1.3",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "tensorflow>=2.14.0",
    "textblob>=0.19.0",
    "tweepy>=4.15.0",
    "tweet-preprocessor>=0.6.0",
    "yfinance>=0.2.55",
]
